обновил методы
